build: update requires for release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,9 @@ workflows:
       - 'build-macos'
       - release:
           requires:
-            - 'build'
+            - 'build-linux'
+            - 'build-windows'
+            - 'build-macos'
           filters:
             branches:
               only: master
