--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   win: circleci/windows@1.0.0
 
 jobs:
-  build-linux:
+  build:
     docker:
       - image: golang:1.12
     steps:
@@ -22,16 +22,6 @@ jobs:
           name: codecov
           command: bash <(curl -s https://codecov.io/bash)
 
-  build-windows:
-    executor:
-      name: win/vs2019
-      shell: powershell.exe
-    steps:
-      - checkout
-      - run:
-          name: go test
-          command: go test -coverprofile=coverage.txt -covermode=atomic ./...
-
   release:
     docker:
       - image: rdaniels6813/semantic-release-alpine:latest
@@ -45,13 +35,10 @@ workflows:
   version: 2
   build:
     jobs:
-      - 'build-linux'
-      - 'build-windows'
-      - 'build-macos'
+      - 'builds'
       - release:
           requires:
-            - 'build-linux'
-            - 'build-windows'
+            - 'build'
           filters:
             branches:
               only: master
