--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ before_script:
     fi
 
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then xvfb-run ./script/cibuild; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then chmod +x ./script/cibuild && xvfb-run ./script/cibuild; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then go test ./...; fi
   - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then go test ./...; fi
