--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ before_script:
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then chmod +x ./script/cibuild && xvfb-run ./script/cibuild; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make build && make test; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then make build && make test; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then env GO111MODULE=on go test ./...; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then env GO111MODULE=on go test ./...; fi
