--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,8 @@
 version: "{build}"
 
-image: Visual Studio 2019
+image: Visual Studio 2017
 platform:
   - x64
-
-environment:
-  GOPATH: c:\gopath
-  GOVERSION: 1.12.9
 
 branches:
   only:
@@ -15,16 +11,12 @@ branches:
 clone_depth: 10
 
 install:
-  - set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
-  - rmdir c:\go /s /q
-  - appveyor DownloadFile https://storage.googleapis.com/golang/go%GOVERSION%.windows-amd64.zip
-  - 7z x go%GOVERSION%.windows-amd64.zip -y -oC:\ > NUL
-  - go version
-  - go env
-  - mkdir c:\gopath
+  - go get golang.org/dl/go1.12.9
+  - go1.12.9 download
+
 
 build_script:
-  - go test ./...
+  - go1.12.9 test ./...
 
 test: off
 deploy: off
