--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,6 @@ script:
     fi
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then 
-      env GO111MODULE=on go test ./...
+      env GO111MODULE=on make test
+      bash <(curl -s https://codecov.io/bash)
     fi
